UI: fix transparent images having low constrast in dark mode

--- a/arhiv/src/ui/index.css
+++ b/arhiv/src/ui/index.css
@@ -206,4 +206,9 @@
     position: relative;
     z-index: 1;
   }
+
+  /* make transparent images more contrast in dark mode */
+  img {
+    background-color: white;
+  }
 }
